added the submenus for loading and saving the territory with xml

--- a/src/resources/prop/language.properties
+++ b/src/resources/prop/language.properties
@@ -42,6 +42,11 @@ menu.territory.item.serialize.mnemonic=E
 menu.territory.item.deserialize=Deserialisieren
 menu.territory.item.deserialize.mnemonic=D
 
+menu.territory.item.loadsax=Laden mit SAX
+menu.territory.item.loaddom=Laden mit DOM
+menu.territory.item.loadstaxcur=Laden mit StAX-Cursor
+menu.territory.item.loadstaxit=Laden mit StAX-Iterator
+
 menu.simulation.txt=Simulation
 menu.simulation.mnemonic=S
 menu.simulation.item.start=Start
