added JavaDB for storing and loading examples

--- a/src/resources/prop/language.properties
+++ b/src/resources/prop/language.properties
@@ -56,6 +56,17 @@ menu.simulation.item.pause.mnemonic=P
 menu.simulation.item.stop=Stopp
 menu.simulation.item.stop.mnemonic=T
 
+menu.examples.txt=Beispiele
+menu.examples.mnemonic=B
+menu.examples.item.save=Speichern
+menu.examples.item.save.mnemonic=S
+menu.examples.item.load=Laden
+menu.examples.item.load.mnemonic=L
+menu.examples.nothingfound=Leider wurde kein Beispiel zum Tag gef
+menu.examples.saveexample=Bitte Tags zum Speichern dieses Beispiels angeben.
+menu.examples.loadexample=Bitte geben Sie einen Tag zum Laden des Beispiels an.
+menu.examples.chooseexample=Bitte wählen Sie das Beispiel zum Laden.
+
 err.nomainmethod=Keine main-Methode gefunden, vielleicht neu compilieren?
 err.nofireballs=Habe keine Feuerbälle mehr!
 err.nofireballattile=Auf dieser Kachel liegen keine Feuerbälle! 
