--- a/src/resources/prop/language.properties
+++ b/src/resources/prop/language.properties
@@ -62,7 +62,7 @@ menu.examples.item.save=Speichern
 menu.examples.item.save.mnemonic=S
 menu.examples.item.load=Laden
 menu.examples.item.load.mnemonic=L
-menu.examples.nothingfound=Leider wurde kein Beispiel zum Tag gef
+menu.examples.nothingfound=Leider wurde kein Beispiel zum Tag gefunden
 menu.examples.saveexample=Bitte Tags zum Speichern dieses Beispiels angeben.
 menu.examples.loadexample=Bitte geben Sie einen Tag zum Laden des Beispiels an.
 menu.examples.chooseexample=Bitte wählen Sie das Beispiel zum Laden.
