--- a/src/resources/prop/language.properties
+++ b/src/resources/prop/language.properties
@@ -4,6 +4,12 @@ fireballs=Feuerbälle
 tile=Kachel
 wall=Wand
 
+menu.tutor.txt=Tutor
+menu.tutor.item.sendrequest=Sende Anfrage
+menu.tutor.item.sendanswer=Antwort senden
+menu.tutor.item.getrequest=Anfrage abholen
+menu.tutor.item.getanswer=Antwort abholen
+
 btn.save.txt=Speichern
 btn.compile.txt=Compilieren
 btn.fireball.txt=Fügt einen Feuerball hinzu
