rmi request now works with xml to avoid the unknown class error when trying to deserialize an unknown boohoo object, previously compiled by the student. also cleaned up some warnings and added serialization id's to the view components

--- a/bin/resources/prop/language.properties
+++ b/bin/resources/prop/language.properties
@@ -78,3 +78,6 @@ err.nofireballs=Habe keine Feuerbälle mehr!
 err.nofireballattile=Auf dieser Kachel liegen keine Feuerbälle! 
 err.nospace=Auf dieser Kachel ist kein Platz mehr!
 err.cannotmovetotile=Ich kann nicht auf diese Kachel ziehen! 
+err.noansweraviable=Noch keine Antwort verfügbar!
+err.norequestaviable=Keine Anfragen verfügbar!
+err.noconnectiontutorservice=Konnte keine Verbindung mit dem Tutor-Service aufbauen!
