added printing of editor content and territory

--- a/bin/resources/prop/language.properties
+++ b/bin/resources/prop/language.properties
@@ -34,6 +34,8 @@ menu.editor.item.save=Speichern
 menu.editor.item.save.mnemonic=S
 menu.editor.item.compile=Compilieren
 menu.editor.item.compile.mnemonic=C
+menu.editor.item.printeditor=Programm drucken
+menu.editor.item.printeditor.mnemonic=P
 menu.editor.item.exit=Beenden
 menu.editor.item.exit.mnemonic=B
 
@@ -45,6 +47,8 @@ menu.territory.item.load=Laden
 menu.territory.item.load.mnemonic=L
 menu.territory.item.serialize=Serialisieren
 menu.territory.item.serialize.mnemonic=E
+menu.territory.item.printterritory=Territorium drucken
+menu.territory.item.printterritory.mnemonic=T
 menu.territory.item.deserialize=Deserialisieren
 menu.territory.item.deserialize.mnemonic=D
 
@@ -81,3 +85,4 @@ err.cannotmovetotile=Ich kann nicht auf diese Kachel ziehen!
 err.noansweraviable=Noch keine Antwort verfügbar!
 err.norequestaviable=Keine Anfragen verfügbar!
 err.noconnectiontutorservice=Konnte keine Verbindung mit dem Tutor-Service aufbauen!
+err.noprintservicefound=Es wurde kein Drucker gefunden!
